Modified css to use colors theme variables and used a fixed font and em sizes for the icon

--- a/docs/plugins/haveibeenpwned/plugin.css
+++ b/docs/plugins/haveibeenpwned/plugin.css
@@ -1,20 +1,20 @@
 .hibp-pwned:after{
     content: "';--";
-    font-weight: bold;
-    font-size: 1.2em;
-    background-color: white;
+    font: bold 1.2em "Courrier New";
+    text-align: center;
+    background-color: var(--text-color);
     background-size:cover;
     position: relative;;
-    width:20px;
-    height:20px;
+    width:1.5em;
+    height:1.5em;
     animation: hibp-spin 1s linear 0s infinite;
     transform-origin: center center;
 }
 @keyframes hibp-spin {
   0% { transform: rotate(0deg); }
-  25% { transform: rotate(10deg); color: rgb(226, 0, 0); }
+  25% { transform: rotate(10deg); color: var(--error-color); }
   50% { transform: rotate(0deg); }
-  75% { transform: rotate(-10deg); color: rgb(126, 0, 0); }
+  75% { transform: rotate(-10deg); color: var(--error-color); }
   100% { transform: rotate(0deg); }
 }
 
