--- a/docs/plugins/haveibeenpwned/plugin.css
+++ b/docs/plugins/haveibeenpwned/plugin.css
@@ -1,8 +1,8 @@
-.hibp-pwned:after{
-    content: "';--";
+.hibp-pwned:before{
+    content: "';-- ";
     font: bold 1.2em "Courrier New";
     text-align: center;
-    background-color: var(--text-color);
+    background-color: var(--background-color);
     background-size:cover;
     position: relative;;
     width:1.5em;
