--- a/docs/plugins/haveibeenpwned/plugin.css
+++ b/docs/plugins/haveibeenpwned/plugin.css
@@ -4,7 +4,7 @@
     text-align: center;
     background-color: var(--text-color);
     background-size:cover;
-    position: relative;;
+    position: relative; 
     width:1.5em;
     height:1.5em;
     animation: hibp-spin 1s linear 0s infinite;
