--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -60,12 +60,18 @@ p {
     fill: #6386EC;
     margin: 20px 10px;
 }
+.img-install {
+    margin: 55px;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.5);
+}
 
 @media only screen and (max-width: 480px) {
     p, h1 {
         margin-bottom: 1em;
     }
     img.img-install {
-        width: 100% !important;
+        width: calc(100% - 40px) !important;
+        margin: 20px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
     }
 }
