--- a/docs/plugins/theme-dracula/plugin.css
+++ b/docs/plugins/theme-dracula/plugin.css
@@ -2,7 +2,7 @@
   --background-color: #22212c;
   --medium-color: #9580ff;
   --text-color: #f8f8f2;
-  --action-color: #8AFF80;
+  --action-color: #9580ff;
   --selected-item-text-color: #22212c;
   --error-color:#e7655b;
   --accent-border-color: #FF80BF;
@@ -11,7 +11,8 @@
   --text-selection-bg-color: #454158;
 }
 
-.th-dracula .menu__item--active.menu__item--hover>.menu__item-body, .menu__item--active>.menu__item-body{
+.th-dracula .menu__item--active.menu__item--hover>.menu__item-body,
+.th-dracula .menu__item--active>.menu__item-body{
   --selected-item-text-color: #22212c;
   color:#22212c;
 }
@@ -30,11 +31,4 @@
 .th-dracula textarea:focus {
   border: 2px solid rgba(106, 209, 192, 0.8);
   box-shadow: 0px 0px 3px #22212c;
-}
-
-.th-dracula input[type="button"],
-.th-dracula input[type="reset"],
-.th-dracula input[type="submit"],
-.th-dracula button{
-  color: #22212c;
 }
